Ajout de la question 7, matrice de correlation

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -13,7 +13,12 @@
   {
    "cell_type": "code",
    "id": "b003ab98-0656-4769-a091-34c2d40270b8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-18T00:59:42.976575Z",
+     "start_time": "2024-11-18T00:59:38.744814Z"
+    }
+   },
    "source": [
     "from cProfile import label\n",
     "\n",
@@ -23,17 +28,23 @@
     "from scipy.stats import binned_statistic\n",
     "from streamlit import columns\n",
     "from src.models import model_start\n",
+    "\n",
     "import config\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "935a0893-61e9-45a2-8c74-83de62ee46a9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-18T00:59:43.001353Z",
+     "start_time": "2024-11-18T00:59:42.980886Z"
+    }
+   },
    "source": [
     "# all imports\n",
     "from src import *\n",
@@ -41,7 +52,7 @@
     "import os.path"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -54,7 +65,14 @@
   {
    "cell_type": "code",
    "id": "ba8e508b87e75d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-11-18T00:59:43.041004Z"
+    }
+   },
    "source": [
     "filename = './data/dataframe_2016_to_2019.csv'\n",
     "start_year = 2016\n",
@@ -73,8 +91,23 @@
     "                                                         np.arange(start_year, end_year + 1).tolist())\n",
     "    df_2016_to_2019.to_csv(filename, index=False)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully imported NHL data for the 2016 season.\n",
+      "Successfully imported NHL data for the 2017 season.\n"
+     ]
+    }
+   ],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Récupération des données d'entraînement",
+   "id": "ebed071c016b2b6d"
   },
   {
    "cell_type": "code",
@@ -101,17 +134,6 @@
    "source": [
     "## Question 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "id": "b0fab71b229810cc",
-   "metadata": {},
-   "source": [
-    "train_data['isGoal'] = train_data['typeDescKey'].apply(lambda x: 1 if x == 'goal' else 0)\n",
-    "train_data['emptyGoalNet'] = train_data['emptyGoalNet'].astype(int)"
-   ],
-   "outputs": [],
-   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -375,7 +397,8 @@
    "id": "1b29a7e8-d323-4297-8886-34deb30773fc",
    "metadata": {},
    "source": [
-    "filtered_data = train_data[(train_data['shotDistance'] > 90) & (train_data['typeDescKey'] == 'goal') & (train_data['emptyGoalNet'] == 0)]\n",
+    "filtered_data = train_data[\n",
+    "    (train_data['shotDistance'] > 90) & (train_data['typeDescKey'] == 'goal') & (train_data['emptyGoalNet'] == 0)]\n",
     "len(filtered_data)"
    ],
    "outputs": [],
@@ -385,9 +408,7 @@
    "cell_type": "code",
    "id": "f1c4e345-811f-4578-9a8c-d0d16a9ac23f",
    "metadata": {},
-   "source": [
-    "filtered_data.loc[54362,:]"
-   ],
+   "source": "filtered_data.loc[54362, :]",
    "outputs": [],
    "execution_count": null
   },
@@ -558,7 +579,7 @@
     "accuracy = accuracy_score(y_val, y_pred)\n",
     "f1 = f1_score(y_val, y_pred, average=\"macro\")\n",
     "print(f\"Précision du modèle sur l'ensemble de validation: {accuracy:.2f}\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\")"
    ],
    "outputs": [],
    "execution_count": null
@@ -584,21 +605,21 @@
     "api = wandb.Api()\n",
     "\n",
     "# Spécifiez votre projet\n",
-    "project_name = \"IFT6758.2024-A11\" \n",
-    "entity = \"youry-macius-universite-de-montreal\"  \n",
+    "project_name = \"IFT6758.2024-A11\"\n",
+    "entity = \"youry-macius-universite-de-montreal\"\n",
     "\n",
     "try:\n",
     "    artifact = api.artifact(f'{entity}/{project_name}/wpg_v_wsh_2017021065:latest')\n",
     "    print(\"L'artefact existe déjà.\")\n",
     "except wandb.errors.CommError as e:\n",
     "    run = wandb.init(project=\"IFT6758.2024-A11\")\n",
-    "    \n",
+    "\n",
     "    # Create artefact\n",
     "    artifact = wandb.Artifact(\n",
     "        \"wpg_v_wsh_2017021065\",\n",
     "        type=\"dataset\"\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # add data\n",
     "    my_table = wandb.Table(dataframe=train_data[train_data['idGame'] == 2017021065])\n",
     "    artifact.add(my_table, \"wpg_v_wsh_2017021065\")\n",
@@ -622,10 +643,16 @@
    "id": "f7be9c6cd03aff4f",
    "metadata": {},
    "source": [
+    "# Sélection des caractéristiques\n",
+    "characteristics = ['shotDistance', 'shotAngle', 'shotType', 'numberPeriod', 'gameSeconds',\n",
+    "                   'rebound', 'emptyGoalNet', 'offensivePressureTime', 'speedFromLastEvent', 'distanceFromLastEvent']\n",
+    "\n",
+    "X = train_data[characteristics].dropna()\n",
+    "y = train_data['isGoal'][X.index]\n",
+    "\n",
     "# Chargement des données\n",
-    "config.INPUTS_DATA = X_train.to_numpy()\n",
-    "config.LABELS_DATA = y_train.to_numpy()\n",
-    "config.TEST_DATA = X_val.to_numpy()"
+    "config.INPUTS_DATA = X.to_numpy()\n",
+    "config.LABELS_DATA = y.to_numpy()"
    ],
    "outputs": [],
    "execution_count": null
@@ -644,14 +671,163 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Question 7",
+   "id": "ac70cefd2fb59ea6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Acquisition des données d'entraînement",
+   "id": "110a3ad441eb0250"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "# Évaluation sur l'ensemble de test\n",
+    "filename = './data/dataframe_2016_to_2019.csv'\n",
+    "start_year = 2020\n",
+    "end_year = 2021\n",
+    "\n",
+    "if not os.path.isfile(filename):\n",
+    "    # Get the data from the NHL API (2020 - 2021)\n",
+    "    nhl_data_provider = get_data_from(start_year, end_year)\n",
+    "\n",
+    "    # Clean the data\n",
+    "    clean_regular_season, clean_playoff = clean_data(nhl_data_provider)\n",
+    "\n",
+    "    # Transform data into dataframe\n",
+    "    df_2016_to_2019 = convert_dictionaries_to_dataframes(clean_regular_season,\n",
+    "                                                         clean_playoff,\n",
+    "                                                         np.arange(start_year, end_year + 1).tolist())\n",
+    "    df_2016_to_2019.to_csv(filename, index=False)"
+   ],
+   "id": "9de912320ec3c7b0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Récupération des données d'entraînement",
+   "id": "16b4dab03f2ba13c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "test_data = pd.read_csv(filename)",
+   "id": "e2e27c2c3ffb3c63",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Regression logistique",
+   "id": "ff430e4198af40fc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "config.TEST_DATA = test_data.to_numpy()",
+   "id": "a7c56cae8995a5a5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "#TODO: CODE ICI",
+   "id": "dc130706e8a2214a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### XGBoost",
+   "id": "d2f8a76452e472de"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "#TODO: CODE ICI",
+   "id": "285cbf69141f057d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Préparation des données pour les réseaux de neurones",
+   "id": "2e66e9988a15241d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Chargement des données de test\n",
+    "X = test_data[characteristics].dropna()\n",
+    "y = test_data['isGoal'][X.index]\n",
+    "\n",
+    "# Ajout dans le fichier config.py :\n",
+    "config.TEST_DATA = X.to_numpy()"
+   ],
+   "id": "d82b76b63dbf9e43",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Perceptron",
+   "id": "4eabd2ffc8dc8d9c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "y_pred = model_start.predict_data(\"Perceptron\")\n",
     "f1 = f1_score(y_pred, y_val, average=\"macro\")\n",
     "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
    ],
    "id": "e01ba9b8c60fbeb8",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### MLP 1 couche cachée",
+   "id": "2ae5701f1d4b1b12"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "y_pred = model_start.predict_data(\"MLP_H1\")\n",
+    "f1 = f1_score(y_pred, y_val, average=\"macro\")\n",
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+   ],
+   "id": "ee846e308235c4a0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### MLP 2 couches cachées",
+   "id": "9d97aab66afe5349"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "y_pred = model_start.predict_data(\"MLP_H2\")\n",
+    "f1 = f1_score(y_pred, y_val, average=\"macro\")\n",
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+   ],
+   "id": "83db9a0c20315756",
    "outputs": [],
    "execution_count": null
   }
