--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -263,7 +263,7 @@
     "df_distance_goal_rate = train_data.groupby('shotDistance')['isGoal'].mean().reset_index()\n",
     "df_distance_goal_rate.columns = ['shotDistance', 'goalRate']\n",
     "\n",
-    "df_distance_goal_rate\n"
+    "df_distance_goal_rate"
    ],
    "outputs": [],
    "execution_count": null
@@ -640,7 +640,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "#model_start.optimize(\"Perceptron\") ",
+   "source": "# model_start.optimize(\"Perceptron\") ",
    "id": "b81af5cae43276fc",
    "outputs": [],
    "execution_count": null
@@ -719,7 +719,13 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "test_data = pd.read_csv(filename)",
+   "source": [
+    "test_data = pd.read_csv(filename)\n",
+    "\n",
+    "# Séparation des données de test en saison régulières et playoff\n",
+    "regular_test_data = test_data[test_data['gameType'] == \"regular-season\"].dropna()\n",
+    "playoff_test_data = test_data[test_data['gameType'] == \"playoffs\"].dropna()"
+   ],
    "id": "e2e27c2c3ffb3c63",
    "outputs": [],
    "execution_count": null
@@ -727,16 +733,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Regression logistique",
-   "id": "ff430e4198af40fc"
+   "source": "## Prédiction pendant la saison régulière (2020-2021)",
+   "id": "e8953aad49eb9480"
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "source": "config.TEST_DATA = test_data.to_numpy()",
-   "id": "a7c56cae8995a5a5",
-   "outputs": [],
-   "execution_count": null
+   "cell_type": "markdown",
+   "source": "### Regression logistique",
+   "id": "ff430e4198af40fc"
   },
   {
    "metadata": {},
@@ -771,12 +775,11 @@
    "cell_type": "code",
    "source": [
     "# Chargement des données de test\n",
-    "X = test_data[characteristics].dropna()\n",
-    "y = test_data['isGoal'][X.index]\n",
-    "print(X.to_numpy().dtype)\n",
+    "X_regular = regular_test_data[characteristics]\n",
+    "y_regular = regular_test_data['isGoal'][X_regular.index]\n",
     "\n",
     "# Ajout dans le fichier config.py :\n",
-    "config.TEST_DATA = X.to_numpy()"
+    "config.TEST_DATA = X_regular.to_numpy()"
    ],
    "id": "d82b76b63dbf9e43",
    "outputs": [],
@@ -793,7 +796,7 @@
    "cell_type": "code",
    "source": [
     "y_pred = model_start.predict_data(\"Perceptron\")\n",
-    "f1 = f1_score(y_pred, y, average=\"macro\")\n",
+    "f1 = f1_score(y_pred, y_regular, average=\"macro\")\n",
     "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
    ],
    "id": "e01ba9b8c60fbeb8",
@@ -811,7 +814,7 @@
    "cell_type": "code",
    "source": [
     "y_pred = model_start.predict_data(\"MLP_H1\")\n",
-    "f1 = f1_score(y_pred, y, average=\"macro\")\n",
+    "f1 = f1_score(y_pred, y_regular, average=\"macro\")\n",
     "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
    ],
    "id": "ee846e308235c4a0",
@@ -829,10 +832,119 @@
    "cell_type": "code",
    "source": [
     "y_pred = model_start.predict_data(\"MLP_H2\")\n",
-    "f1 = f1_score(y_pred, y, average=\"macro\")\n",
+    "f1 = f1_score(y_pred, y_regular, average=\"macro\")\n",
     "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
    ],
    "id": "83db9a0c20315756",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Prédiction pendant les Playoffs (2020-2021)",
+   "id": "b1a2fa1c55ec9b45"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Regression logistique",
+   "id": "49be4e944b91b206"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "#TODO: CODE ICI",
+   "id": "113e420e11a0a844",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### XGBoost",
+   "id": "d7557c796411dae0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "#TODO: CODE ICI",
+   "id": "a40f5d2b0b9703a0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Préparation des données pour les réseaux de neurones",
+   "id": "a42703b60c0a1903"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Chargement des données de test\n",
+    "X_playoff = playoff_test_data [characteristics]\n",
+    "y_playoff = playoff_test_data ['isGoal'][X_playoff.index]\n",
+    "\n",
+    "# Ajout dans le fichier config.py :\n",
+    "config.TEST_DATA = X_playoff.to_numpy()"
+   ],
+   "id": "6f8044de5e5097ef",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Perceptron",
+   "id": "57f0cc2deb08ca14"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "y_pred = model_start.predict_data(\"Perceptron\")\n",
+    "f1 = f1_score(y_pred, y_playoff, average=\"macro\")\n",
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+   ],
+   "id": "82026ab9b5aa04d3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### MLP 1 couche cachée",
+   "id": "8b4ce7d77315b12d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "y_pred = model_start.predict_data(\"MLP_H1\")\n",
+    "f1 = f1_score(y_pred, y_playoff, average=\"macro\")\n",
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+   ],
+   "id": "f1b77493aa66f6ce",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### MLP 2 couches cachées",
+   "id": "b9f861bfd46e2d34"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "y_pred = model_start.predict_data(\"MLP_H2\")\n",
+    "f1 = f1_score(y_pred, y_playoff, average=\"macro\")\n",
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+   ],
+   "id": "6191d485fe81d820",
    "outputs": [],
    "execution_count": null
   }
