grouping of wandb expriences

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -48,6 +48,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0522f93f-bf9f-4b93-b94f-df49d8730388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(type(config.WANDB_PROJECT_NAME))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "81d3f10fb1207ecd",
    "metadata": {},
@@ -287,6 +297,7 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
     "def histogram2D_2_variables_seaborn(df, x, y, title, xlabel, ylabel, kind):\n",
     "    # Remove rows with NaN values\n",
     "    df = df.dropna(subset=[x, y])\n",
@@ -318,7 +329,8 @@
     "g.ax_joint.set_ylabel(\"Distance du tir(pieds)\", fontsize=12)\n",
     "\n",
     "# Ajuster l'espacement du titre\n",
-    "plt.subplots_adjust(top=0.9)  # Ajuste la position du titre"
+    "plt.subplots_adjust(top=0.9)  # Ajuste la position du titre\n",
+    "'''"
    ]
   },
   {
@@ -1410,9 +1422,10 @@
    "source": [
     "# Initialiser Wandb pour distance\n",
     "wandb.init(\n",
-    "    project=\"youry_macius_milestone2\",  # Nom du projet\n",
+    "    project=config.WANDB_PROJECT_NAME,  # Nom du projet\n",
     "    dir=\"C:/DS_milestone2_wandb\",\n",
     "    name=\"LogisticRegression_Distance\",  # Nom de l'expérience\n",
+    "    group=\"logistic_regression\",\n",
     "    tags=[\"logistic_regression\", \"distance_only\"],  # Tags pour cette expérience\n",
     ")\n",
     "\n",
@@ -1461,9 +1474,10 @@
    "source": [
     "# Initialiser Wandb\n",
     "wandb.init(\n",
-    "    project=\"youry_macius_milestone2\",\n",
+    "    project=config.WANDB_PROJECT_NAME,\n",
     "    dir=\"C:/DS_milestone2_wandb\",\n",
     "    name=\"LogisticRegression_Angle\",  # Nom de l'expérience\n",
+    "    group=\"logistic_regression\",\n",
     "    tags=[\"logistic_regression\", \"angle_only\"],  # Tags pour cette expérience\n",
     ")\n",
     "\n",
@@ -1512,9 +1526,10 @@
    "source": [
     "# Initialiser Wandb\n",
     "wandb.init(\n",
-    "    project=\"youry_macius_milestone2\",\n",
+    "    project=config.WANDB_PROJECT_NAME,\n",
     "    dir=\"C:/DS_milestone2_wandb\",\n",
     "    name=\"LogisticRegression_Distance_Angle\",  # Nom de l'expérience\n",
+    "    group=\"logistic_regression\",\n",
     "    tags=[\"logistic_regression\", \"distance et angle\"],  # Tags pour cette expérience\n",
     ")\n",
     "\n",
@@ -1694,7 +1709,7 @@
     "# ROC\n",
     "RocCurveDisplay.from_predictions(y_val, y_predicted_prob, name=\"XGBoost\", color=\"blue\", ax=plt.gca())\n",
     "RocCurveDisplay.from_predictions(y_val, y_proba_random, name=\"Classificateur aléatoire\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
-    "plt.title(\"ROC Curves for Logistic Regression Models\")\n",
+    "plt.title(\"ROC Curve for XGBoost Model\")\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -1782,6 +1797,60 @@
     "#par bin (la fraction de valeurs positive dans chaque bin est donc plus representative )\n",
     "\n",
     "#La courbe est cohérente au début (où il y a beaucoup d'exemples) mais devient incohérente aux extrémités (où les bins sont sous-représentés)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8070c637-f5b6-46c5-b06e-e4a8a2dd14cc",
+   "metadata": {},
+   "source": [
+    "### Wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01263f51-deca-4205-8c16-c1ce3cd62920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialiser Wandb pour distance\n",
+    "wandb.init(\n",
+    "    project=config.WANDB_PROJECT_NAME,  # Nom du projet\n",
+    "    # dir=\"C:/DS_milestone2_wandb\",\n",
+    "    name=\"XGBoost par défaut\",  # Nom de l'expérience\n",
+    "    group=\"XGBoost\",\n",
+    "    tags=[\"XGBoost\", \"distance_and_angle\"],  # Tags pour cette expérience\n",
+    ")\n",
+    "\n",
+    "xgb_params = {\n",
+    "    \"objective\": \"binary:logistic\",\n",
+    "    \"learning_rate\": 0.3,\n",
+    "    \"max_depth\": 6,\n",
+    "    \"n_estimators\": 100,\n",
+    "    \"subsample\": 1.0,\n",
+    "    \"colsample_bytree\": 1.0,\n",
+    "    \"reg_lambda\": 1.0,\n",
+    "    \"reg_alpha\": 0.0,\n",
+    "}\n",
+    "\n",
+    "# Logger les hyperparamètres dans wandb\n",
+    "wandb.config.update(xgb_params)\n",
+    "\n",
+    "# Exemple : Entraîner le modèle\n",
+    "xgb = XGBClassifier(objective='binary:logistic')\n",
+    "xgb.fit(x_train, y_train)\n",
+    "\n",
+    "# Évaluer le modèle (exemple avec AUC ROC)\n",
+    "y_predicted_prob = xgb.predict_proba(x_val)[:, 1]\n",
+    "\n",
+    "auc_roc1 = roc_auc_score(y2_val, y_predicted_prob)\n",
+    "\n",
+    "# Enregistrer les métriques dans Wandb\n",
+    "wandb.log({\"auc_roc\": auc_roc1})\n",
+    "\n",
+    "# Terminer l'expérience\n",
+    "wandb.finish()"
    ]
   },
   {
