removal of forgetten useless cells

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -48,16 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0522f93f-bf9f-4b93-b94f-df49d8730388",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(type(config.WANDB_PROJECT_NAME))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "81d3f10fb1207ecd",
    "metadata": {},
@@ -297,7 +287,6 @@
    },
    "outputs": [],
    "source": [
-    "'''\n",
     "def histogram2D_2_variables_seaborn(df, x, y, title, xlabel, ylabel, kind):\n",
     "    # Remove rows with NaN values\n",
     "    df = df.dropna(subset=[x, y])\n",
@@ -329,8 +318,7 @@
     "g.ax_joint.set_ylabel(\"Distance du tir(pieds)\", fontsize=12)\n",
     "\n",
     "# Ajuster l'espacement du titre\n",
-    "plt.subplots_adjust(top=0.9)  # Ajuste la position du titre\n",
-    "'''"
+    "plt.subplots_adjust(top=0.9)  # Ajuste la position du titre"
    ]
   },
   {
