mentionning the entity name for wandb

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -44,7 +44,12 @@
     "# all imports\n",
     "from src import *\n",
     "import pandas as pd\n",
-    "import os.path"
+    "import os.path\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import wandb\n",
+    "import pickle\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from xgboost import XGBClassifier"
    ]
   },
   {
@@ -105,9 +110,7 @@
    },
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv(filename)\n",
-    "\n",
-    "train_data"
+    "train_data = pd.read_csv(filename)"
    ]
   },
   {
@@ -1357,23 +1360,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4eda9040f49797c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-19T01:11:41.208091Z",
-     "start_time": "2024-11-19T01:11:41.053391Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "import pickle\n",
-    "from sklearn.metrics import roc_auc_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e729d5608c1b1709",
    "metadata": {
     "ExecuteTime": {
@@ -1415,6 +1401,7 @@
     "    name=\"LogisticRegression_Distance\",  # Nom de l'expérience\n",
     "    group=\"logistic_regression\",\n",
     "    tags=[\"logistic_regression\", \"distance_only\"],  # Tags pour cette expérience\n",
+    "    entity=config.WANDB_TEAM_NAME\n",
     ")\n",
     "\n",
     "# Exemple : Entraîner le modèle\n",
@@ -1467,6 +1454,7 @@
     "    name=\"LogisticRegression_Angle\",  # Nom de l'expérience\n",
     "    group=\"logistic_regression\",\n",
     "    tags=[\"logistic_regression\", \"angle_only\"],  # Tags pour cette expérience\n",
+    "    entity=config.WANDB_TEAM_NAME\n",
     ")\n",
     "\n",
     "# Exemple : Entraîner le modèle\n",
@@ -1519,6 +1507,7 @@
     "    name=\"LogisticRegression_Distance_Angle\",  # Nom de l'expérience\n",
     "    group=\"logistic_regression\",\n",
     "    tags=[\"logistic_regression\", \"distance et angle\"],  # Tags pour cette expérience\n",
+    "    entity=config.WANDB_TEAM_NAME\n",
     ")\n",
     "\n",
     "# Exemple : Entraîner le modèle\n",
@@ -1561,14 +1550,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
-    "\n",
     "# Connect to the Wandb API\n",
     "api = wandb.Api()\n",
     "\n",
     "# Spécifiez votre projet\n",
-    "project_name = \"IFT6758.2024-A11\"\n",
-    "entity = \"youry-macius-universite-de-montreal\"\n",
+    "project_name = config.WANDB_PROJECT_NAME\n",
+    "entity = config.WANDB_TEAM_NAME\n",
     "\n",
     "try:\n",
     "    artifact = api.artifact(f'{entity}/{project_name}/wpg_v_wsh_2017021065:latest')\n",
@@ -1610,16 +1597,6 @@
    "metadata": {},
    "source": [
     "### Entrainement du modèle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0c71dd5-a1aa-46fe-a7e9-9aee0b7e90aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from xgboost import XGBClassifier"
    ]
   },
   {
@@ -1805,10 +1782,10 @@
     "# Initialiser Wandb pour distance\n",
     "wandb.init(\n",
     "    project=config.WANDB_PROJECT_NAME,  # Nom du projet\n",
-    "    # dir=\"C:/DS_milestone2_wandb\",\n",
-    "    name=\"XGBoost par défaut\",  # Nom de l'expérience\n",
+    "    name=\"XGBoost par défaut : distance et angle\",  # Nom de l'expérience\n",
     "    group=\"XGBoost\",\n",
     "    tags=[\"XGBoost\", \"distance_and_angle\"],  # Tags pour cette expérience\n",
+    "    entity=config.WANDB_TEAM_NAME\n",
     ")\n",
     "\n",
     "xgb_params = {\n",
@@ -1847,6 +1824,124 @@
    "metadata": {},
    "source": [
     "## Question 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1abbe852-3910-40a4-a8b4-be9ec0ccd4f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorial_characteristics = [\n",
+    "    'shotType',\n",
+    "    'previousEventType',\n",
+    "    'rebound'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79543bbf-fb0c-46a8-a130-755aa76db429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "characteristics = ['shotDistance', \n",
+    "                   'shotAngle', \n",
+    "                   'numberPeriod', \n",
+    "                   'gameSeconds',\n",
+    "                   'xCoord',\n",
+    "                   'yCoord',\n",
+    "                   'previousXCoord',\n",
+    "                   'previousYCoord',\n",
+    "                   'timeSinceLastEvent',\n",
+    "                   'distanceFromLastEvent',\n",
+    "                   'speedFromLastEvent',\n",
+    "                  'reboundAngleShot' # changement angle de tir\n",
+    "                  ] + categorial_characteristics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a0dcf59-cee8-4b5d-a58e-531154d3ce80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = train_data[characteristics].dropna()\n",
+    "y_train = train_data['isGoal'][x_train.index].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f77ab92f-6e9f-40ab-9a64-3ed1edcde1d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "\n",
+    "full_pipeline = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"cat\", OneHotEncoder(), categorial_characteristics),  # OneHotEncoder pour les colonnes catégorielles\n",
+    "    ],\n",
+    "    remainder=\"passthrough\"  # Garder les autres colonnes telles quelles\n",
+    ")\n",
+    "\n",
+    "# Appliquer la pipeline aux données\n",
+    "x_train = full_pipeline.fit_transform(x_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300c07ef-17fb-4228-a083-aeff2fbeb4e0",
+   "metadata": {},
+   "source": [
+    "### Optimisation des hyperparamètres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "736dc59b-9b7e-41e7-9bfd-b76295fd60d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb = XGBClassifier(objective='binary:logistic', n_estimators=500)\n",
+    "xgb.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eae24435-fe08-4371-9277-305e974d8301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    \"learning_rate\": [0.01, 0.1, 0.2],        # Taux d'apprentissage\n",
+    "    \"max_depth\": [5, 10, 20],                  # Profondeur maximale des arbres\n",
+    "    \"n_estimators\": [50, 100, 200],          # Nombre d'arbres\n",
+    "    \"subsample\": [0.8, 1.0],                 # Proportion des échantillons utilisés par arbre\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=xgb,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='f1_weighted',\n",
+    "    cv=5,                                   # Nombre de folds pour la validation croisée\n",
+    "    verbose=1,                              # Niveau de log\n",
+    "    n_jobs=-1                               # Utilisation de tous les cœurs disponibles\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "# Résultats de la meilleure combinaison d'hyperparamètres\n",
+    "print(\"Meilleurs hyperparamètres :\", grid_search.best_params_)\n",
+    "print(\"Meilleur score (F1-SCORE) :\", grid_search.best_score_)"
    ]
   },
   {
